# whisper-transcription-french

./: README.md  app.py  client.py  fastapi_backend.py  index.html  index.js  pyproject.toml  requirements.txt  style.css
